tests/conformance/valid/page_multi_table_document.plk
P1 page_multi_table_document () => R0[:32.16]
2[:32.16] => Z1[:32.16]
3[:32.16] => Z2[:32.16]
4[:32.16] => Z3[:32.16]
5[:32.16] => Z4[:32.16]
PAGE
V|1   2   3
S|32.16 32.16 32.16
|A + B => R
                        V|3   4   5
                        S|32.16 32.16 32.16
                        |A + B => R
ENDPAGE
R3[:32.16] + R5[:32.16] => R0[:32.16]
END
